Change the code to match screenshots
Code was modified to match the screenshots.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-ca">
+
 <head>
   <meta charset="utf-8">
   <title>Ice cream</title>
@@ -10,12 +11,13 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
 </head>
+
 <body>
   <div class="outer-banner">
     <div class="inner-banner wrapper grid">
       <div class="unit xs-1 s-1 m-3-4 l-3-4 text">
-        <h1 class="tenamega bold">Ice Cream</h1>
-        <p class="peta width">So sweet, creamy & delicious it’ll literally melt in your mouth!</p>
+        <h1 class="tenamega bold push-none">Ice Cream</h1>
+        <p class="peta width push">So sweet, creamy & delicious it’ll literally melt in your mouth!</p>
         <div class="btn btn-ghost">
           <a href="#" class="giga">Enjoy Now!</a>
         </div>
@@ -31,4 +33,5 @@
   </div>
 
 </body>
+
 </html>
